...
    }
    
    
    
    private func setupTableView(){
        
        tableView.accessibilityIdentifier = "EditUser"
        
        if let keyWindow = UIApplication.shared.keyWindow, let y = navigationController?.navigationBar.frame.height {
            let height = keyWindow.frame.height - y
            let frame = CGRect(x: 0, y: 0, width: view.frame.width, height: view.frame.height)
            
            tableView.frame = frame
...
